fix: canvas overflow hidden

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,5 +22,6 @@
   canvas {
     height: 100vh;
     max-height: 100vh;
+    overflow: hidden;
   }
 }
